arregle bug del dropdown productos del navbar, era tema de z-index

--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -55,9 +55,11 @@
     position: relative;
     height: 100%;
     width: 100%;
+    display: flex;
+    flex-direction: column;
     .hero-message-container {
         position: relative;
-        z-index: 2;
+        z-index: 1;
         width: 100%;
         display: flex;
         flex-direction: column;
@@ -144,7 +146,7 @@
                 }
             }
             @media (min-width: 768px) and (max-width: 1024px) {
-                width: 65% !important; // Add this line
+                width: 100% !important; // Add this line
             }
             @media(min-width: 768px) {
                 display: block;
@@ -167,14 +169,18 @@
     }
     .hero-image-container {
         // Dimensions and display
+        display: flex;
+        position: relative;
+        justify-content: center;
+        align-items: center;
         width: 100%;
         height: 100%;
-        position: absolute;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-        z-index: 1;
+        // position: absolute;
+        // top: 0;
+        // right: 0;
+        // bottom: 0;
+        // left: 0;
+        // z-index: 1;
         // Blob-shaped mask
         .blob-mask-container {
             position: absolute;
@@ -208,43 +214,53 @@
         .hero-image-medium {
             display: none; // Shown by default
         }
+        .hero-image-mobile {
+            display: block; // Shown by default
+            position: absolute;
+            right: 0;
+            bottom: -33%;
+            left: 90px;
+            rotate: (135deg);
+        }
         .hero-image {
             // Positioning
-            position: absolute;
-            right: 0%;
-            bottom: 0%;
-            z-index: 1;
+            // position: absolute;
+            // right: 0%;
+            // bottom: 0%;
+            // z-index: 1;
             // Dimensions and animation
             width: 640px;
             opacity: 0;
             animation: fadeInAndGoUp .5s ease-in-out forwards;
         }
         // Media queries
-        @media (min-width: 768px) and (max-width: 1024px) {
+        @media (min-width: 992px) and (max-width: 1024px) {
             .hero-image-large {
                 display: none !important; // Shown on larger screens
             }
             .hero-image-medium {
                 display: block !important;
-                right: -30%;
-                bottom: 0%;
+                position: absolute;
+                left: -40%;
+                bottom: 20%;
                 rotate: (133deg);
             }
         }
-        @media (min-width: 426px) and (max-width: 768px) {
+        @media (min-width: 768px) and (max-width: 992px) {
             .hero-image-large {
-                display: none !important;
+                display: none !important; // Shown on larger screens
             }
             .hero-image-medium {
                 display: block !important;
-                right: -20%;
-                bottom: -10%;
+                position: absolute;
+                left: -70%;
+                bottom: 20%;
                 rotate: (133deg);
             }
         }
         @media (min-width: 768px) {
-            top: -50px;
-            left: 50px;
+            // top: -50px;
+            // left: 50px;
             .hero-image-large {
                 display: block;
                 right: 0%;
@@ -253,7 +269,28 @@
             .hero-image-medium {
                 display: none;
             }
+            .hero-image-mobile {
+                display: none !important; // Shown by default
+            }
         }
+        @media (min-width: 426px) and (max-width: 768px) {
+            .hero-image-large {
+                display: none !important;
+            }
+            .hero-image-medium {
+                display: block !important;
+                position: absolute;
+                left: 0%;
+                bottom: 10%;
+                rotate: (133deg);
+            }
+            .hero-image-mobile {
+                display: none !important; // Shown by default
+            }
+        }
+    }
+    @media (min-width: 768px) {
+        flex-direction: row;
     }
 }
 
@@ -880,20 +917,27 @@
                     align-items: center;
                     gap: 16px;
                     flex-direction: row;
-                    h4 {
+                    p {
                         font-weight: 400;
                         color: $text;
+                        margin: 0;
                     }
                     @media(max-width: 768px) {
-                        padding: $p-2 0px;
                         gap: 1em;
                     }
+                }
+                .equipos-action {
+                    margin-top: 1em;
+                }
+                @media(min-width: 768px) {
+                    gap: 1em;
                 }
             }
         }
         .equipos-content-image {
             position: relative;
             overflow: auto;
+            margin: 1em 0em;
             .equipos-feature-card {
                 position: absolute;
                 display: flex;
@@ -940,6 +984,9 @@
                         // max-width: 500px;
                     }
                 }
+            }
+            @media(min-width: 768px) {
+                    margin: 0em;
             }
         }
     }
